# zero-hour

./: README.md  db.sqlite3  pyproject.toml
generals/: tests.py  urls.py  views.py
generals/static/css/: style.css
generals/templates/generals/: about.html  home.html
templates/: base.html  footer.html  navbar.html
zerohour/: asgi.py  settings.py  urls.py  wsgi.py
