[tool.poetry]
name = "zerohour"
version = "0.1.0"
description = ""
authors = ["HamzaAhmad97 <h.radiahmad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
